# discogs_client

./: .bumpversion.cfg  .gitignore  .travis.yml  PYPIRC_TEMPLATE  README.mkd  bump.sh  pypi.sh  pyproject.toml  release.txt  release_troubleshooting.txt  release_workflow.sh  requirements.txt  retag.sh  setup.py  sphinx_requirements.txt
.github/workflows/: discogs_client-build.yml  release-check.yml  release.yaml
debian/: README.debian  changelog  control  copyright  rules  watch
debian/upstream/: metadata
discogs_client/: __init__.py  client.py  exceptions.py  fetchers.py  models.py  ranking.py  utils.py
discogs_client/tests/: test_core.py  test_fetchers.py  test_models.py  test_utils.py
discogs_client/tests/res/marketplace/stats/: 1.json
docs/source/: about.md  authentication.md  conf.py  configuration.md  contributing.md  contribution.md  discogs_client.client.rst  discogs_client.exceptions.rst  discogs_client.fetchers.rst  discogs_client.models.rst  discogs_client.rst  discogs_client.utils.rst  fetching_data.md  fetching_data_code.md  fetching_data_repl.md  index.rst  index_discogs_client.rst  listing.md  optional_configuration.md  quickstart.md  requests_rate_limit.md  writing_docs.md
docs/source/_static/: p3dc.css
src/discogs_client/: __init__.py  client.py  exceptions.py  fetchers.py  models.py  utils.py
tests/tests/: test_core.py  test_models.py  test_utils.py
tests/tests/res/lists/: 1.json
tests/tests/res/users/: example.json
tests/tests/res/users/example/: inventory_per_page=50&page=1.json
(+3 files in other folders)
